main.css will be loaded before specific css fixes for toolbar z-index problem in annomode
git-svn-id: http://halodev.ontoprise.com/svn/HaloSMWExtension/trunk@582 f80b7aa0-dfcc-4e65-a0d9-74108174cbc8

--- a/extensions/SMWHalo/skins/Annotation/annotation.css
+++ b/extensions/SMWHalo/skins/Annotation/annotation.css
@@ -100,3 +100,14 @@
 	overflow: auto;
 	font-size: 11px;
 }
+
+/*z-index fixes so toolbar will be above elements*/
+#p-logo{
+	z-index: 0;
+}
+#p-navigation {
+	z-index: 0;
+}
+#p-search {
+	z-index: 0;
+}
